# copilot-proxy-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  config.example.json  worktree_init.toml
.github/workflows/: ci.yml
docs/: logos.html  performance.md
docs/superpowers/plans/: 2026-06-23-inbound-auth-hardening.md  2026-06-23-module-decomposition.md  2026-06-23-retry-fallback-behavior.md  2026-06-30-copilot-model-metadata.md
docs/superpowers/specs/: 2026-06-30-copilot-model-metadata-design.md
scripts/: benchmark-proxy.sh  benchmark_streaming.py  live-smoke.sh
src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  request_body.rs  state.rs  telemetry.rs
src/copilot/: client.rs  errors.rs  mod.rs  request.rs
src/http/: auth.rs  chat.rs  errors.rs  health.rs  messages.rs  mod.rs  responses.rs  routes.rs  sse.rs  validation.rs
src/responses/: compaction_prototype.rs  mod.rs  request.rs  state.rs
src/translate/: anthropic.rs  mod.rs  openai.rs  responses_formats.rs  responses_stream.rs
tests/: auth_contract.rs  chat_completions_contract.rs  config_contract.rs  copilot_client_contract.rs  copilot_request_contract.rs  http_contract.rs  messages_contract.rs  request_body_contract.rs  responses_contract.rs  responses_ws_contract.rs  state_contract.rs  telemetry_contract.rs
tests/support/: log_capture.rs  mod.rs
