[package]
name = "copilot-proxy-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local Rust proxy for GitHub Copilot-compatible chat, messages, and responses APIs"
license = "MIT"
repository = "https://github.com/smendenhall/copilot-proxy-rs"
readme = "README.md"
keywords = ["copilot", "proxy", "openai", "anthropic", "rust"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "ws"] }
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time", "fs", "io-util"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "serde"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
